...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.AdminActivity$AdminActivity">

    <include
        android:id="@+id/dashboard"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_admin_event"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/Secondary"
        android:drawableLeft="@drawable/calenderresize"
        android:drawableTint="@color/OnSurface"
...
