...
                app:layout_constraintTop_toBottomOf="@+id/promo_qr_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnRemoveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Event"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/openBottomSheetButton"
...
