<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.AdminViewProfiles">
    <include
        android:id="@+id/profiles"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/lines"
        android:layout_height="2dp"
        android:background="@color/Black"
        app:layout_constraintTop_toBottomOf="@+id/profiles"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lines"
        tools:listitem="@layout/profile_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>