<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminImagePage">
    <include
        android:id="@+id/dashboard"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/dashboard"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/imageresize"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="2dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/delete_button"
        android:backgroundTint="@color/Secondary"
        android:textSize="24dp"
        android:text="Delete"
        android:textStyle="bold"
        android:textColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:layout_editor_absoluteX="161dp" />


</androidx.constraintlayout.widget.ConstraintLayout>