<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/SurfaceContainer"
    app:cardCornerRadius="16dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/SurfaceContainer"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_account_circle_24"
            android:tint="@color/OnSurface"/>

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:text="FirstName LastName"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/OnSurface"
            android:layout_toRightOf="@+id/profile_picture"
            android:paddingStart="20dp"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>