<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/SurfaceContainer">


    <ImageButton
        android:id="@+id/qrButton"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selected_button_background"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/qrcode"
        app:tint="@color/OnSecondary" />

    <ImageButton
        android:id="@+id/calenderButton"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selected_button_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_calendar"
        />

    <ImageButton
        android:id="@+id/addCalenderButton"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selected_button_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_plus"
        />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:background="@drawable/selected_button_background"
        app:srcCompat="@drawable/ic_person"
        />

</LinearLayout>