...
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/SurfaceContainer">

            <ImageView
                android:id="@+id/ivCheckInQR"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:visibility="gone">
            </ImageView>
        </androidx.cardview.widget.CardView>
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnGenCheckInQR"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Secondary"
                android:text="Generate check-in QRCode" />

            <TextView
...
                android:textSize="24dp"
                android:padding="10dp"
                android:text="or"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/btnUploadCheckInQR"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Secondary"
                android:text="Upload from Camera Roll" />
        </LinearLayout>

...
