...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event.EventListView"
    android:id="@+id/eventListView">

    <include
        android:id="@+id/eventListToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
...
