...
        app:layout_constraintTop_toBottomOf="@+id/welcomeToAppTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <Button
        android:id="@+id/scanButton"
        android:layout_width="191dp"
        android:layout_height="57dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Secondary"
        android:text="Tap to Scan"
        android:textSize="20dp"
...
